# camera-model-implementations

./: LICENSE.txt  README.md
cpp/: CMakeLists.txt
cpp-cuda/: CMakeLists.txt
cpp-cuda/src/: camera.cc  camera.h  cuda-util.h  main.cc  main.cu  main.cuh
cpp/src/: camera.cc  camera.h  main.cc  util.h
matlab-octave/: benchmark_camera_model.m
